--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.4",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
