--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.4",
     "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
